--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <header class="header" id="header">
+  <header class="header visually-hidden" id="header">
     <div class="header-container container">
       <nav class="header-nav">
         <a class="header-logo" href="./index.html">Web<span class="header-logo-dark">Studio</span></a>
@@ -46,7 +46,7 @@
         <button class="hero-btn" type="button">Order Service</button>
       </div>
     </section>
-    <section class="section info" id="info">
+    <section class="section info " id="info">
       <div class="info-container container">
         <h2 class="visually-hidden">Temp</h2>
         <ul class="info-list">
@@ -95,7 +95,7 @@
         </ul>
       </div>
     </section>
-    <section class="section team" id="team">
+    <section class="section team visually-hidden" id="team">
       <div class="team-container container">
         <h2 class="team-text-primary">Our Team</h2>
         <ul class="team-card-set">
@@ -262,7 +262,7 @@
         </ul>
       </div>
     </section>
-    <section class="section portfolio" id="portfolio">
+    <section class="section portfolio visually-hidden" id="portfolio">
       <div class="portfolio-container container">
         <h2 class="portfolio-text-primary">Our Portfolio</h2>
         <ul class="portfolio-card-set">
@@ -359,7 +359,7 @@
       </div>
     </section>
   </main>
-  <footer class="footer" id="footer">
+  <footer class="footer visually-hidden" id="footer">
     <div class="footer-container container">
       <div class="footer-block-1">
         <a class="footer-logo" href="./index.html">Webs<span class="footer-logo-light">Studio</span></a>
