--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </ul>
       </div>
     </section>
-    <section class="section team visually-hidden" id="team">
+    <section class="section team" id="team">
       <div class="team-container container">
         <h2 class="team-text-primary">Our Team</h2>
         <ul class="team-card-set">
@@ -262,7 +262,7 @@
         </ul>
       </div>
     </section>
-    <section class="section portfolio visually-hidden" id="portfolio">
+    <section class="section portfolio" id="portfolio">
       <div class="portfolio-container container">
         <h2 class="portfolio-text-primary">Our Portfolio</h2>
         <ul class="portfolio-card-set">
