--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <header class="header visually-hidden" id="header">
+  <header class="header" id="header">
     <div class="header-container container">
       <nav class="header-nav">
         <a class="header-logo" href="./index.html">Web<span class="header-logo-dark">Studio</span></a>
@@ -29,6 +29,9 @@
           <li class="header-nav-item"> <a class="nav-html" href="">Contacts</a>
           </li>
         </ul>
+        <svg width="24" height="24" class="menu-icon">
+          <use href="./images/icons.svg#icon-burger"></use>
+        </svg>
       </nav>
       <address class="header-address">
         <ul class="header-address-list">
@@ -359,48 +362,50 @@
       </div>
     </section>
   </main>
-  <footer class="footer visually-hidden" id="footer">
+  <footer class="footer" id="footer">
     <div class="footer-container container">
-      <div class="footer-block-1">
-        <a class="footer-logo" href="./index.html">Webs<span class="footer-logo-light">Studio</span></a>
-        <p class="footer-text-primary">Increase the flow of customers and sales for your business with digital
-          marketing &
-          growth solutions.</p>
-      </div>
+      <span class="module-assist">
+        <div class="footer-block-1">
+          <a class="footer-logo" href="./index.html">Webs<span class="footer-logo-light">Studio</span></a>
+          <p class="footer-text-primary">Increase the flow of customers and sales for your business with digital
+            marketing &
+            growth solutions.</p>
+        </div>
 
-      <div class="footer-block-2">
-        <p class="footer-social-text">Social media</p>
-        <ul class="social-wrapper-footer">
-          <li class="social-item">
-            <a href="instagram" class="social-link-footer">
-              <svg class="icon-socials-footer" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item">
-            <a href="twitter" class="social-link-footer">
-              <svg class="icon-socials-footer" width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item">
-            <a href="facebook" class="social-link-footer">
-              <svg class="icon-socials-footer" width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item">
-            <a href="linkedin" class="social-link-footer">
-              <svg class="icon-socials-footer" width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
+        <div class="footer-block-2">
+          <p class="footer-social-text">Social media</p>
+          <ul class="social-wrapper-footer">
+            <li class="social-item">
+              <a href="instagram" class="social-link-footer">
+                <svg class="icon-socials-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="twitter" class="social-link-footer">
+                <svg class="icon-socials-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="facebook" class="social-link-footer">
+                <svg class="icon-socials-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="linkedin" class="social-link-footer">
+                <svg class="icon-socials-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </span>
       <div class="form-container">
         <p class="form-subscribe-text">Subscribe</p>
         <form class="subscribe-form">
@@ -410,11 +415,12 @@
           <button type="submit" class="subscribe-button">
             Subscribe
             <svg width="24" height="24" class="subscribe-icon">
-              <use href="./images/icons.svg#icon-submit"></use>
+              <use href="./images/icons.svg#icon-paperplane"></use>
             </svg>
           </button>
         </form>
       </div>
+
     </div>
   </footer>
 
@@ -482,10 +488,12 @@
                 <use href="./images/icons.svg#icon-Mark"></use>
               </svg>
             </span>
-            I accept the terms and conditions of the
-            <a class="user-privacy-link" href="#" target="_blank" rel="noopener noreferrer">
-              Privacy Policy
-            </a>
+            <span class="module-terms">
+              I accept the terms and conditions of the
+              <a class="user-privacy-link" href="#" target="_blank" rel="noopener noreferrer">
+                Privacy Policy
+              </a>
+            </span>
 
           </label>
 
@@ -499,6 +507,68 @@
   </div>
 
   <!-- #endregion -->
+
+  <!-- #region mobile menu -->
+  <div class="mobile-menu js-menu-container" id="mobile-menu">
+    <button class="modal-btn mobile-btn js-close-modal" type="button">
+      <svg class="modal-btn-icon icon-close" width="8" height="8">
+        <use href="./images/icons.svg#icon-close"></use>
+      </svg>
+    </button>
+
+    <ul class="mobile-nav-list">
+      <li class="mobile-nav-item">
+        <a class=".mobile-html active" href="./index.html">Studio</a>
+      </li>
+      <li class="mobile-nav-item">
+        <a class=".mobile-html" href="">Portfolio</a>
+      </li>
+      <li class="mobile-nav-item">
+        <a class=".mobile-html" href="">Contacts</a>
+      </li>
+    </ul>
+
+    <ul class="mobile-menu-contacts">
+      <li>
+        <a class="address-html accent" href="tel:+110001111111">+11 (000) 111-11-11</a>
+      </li>
+      <li>
+        <a class="address-html" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      </li>
+    </ul>
+
+    <ul class="social-wrapper-mobile">
+      <li class="social-item">
+        <a href="instagram" class="social-link-team">
+          <svg class="icon-socials-team" width="16" height="16">
+            <use href="./images/icons.svg#icon-instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="social-item">
+        <a href="twitter" class="social-link-team">
+          <svg class="icon-socials-team" width="16" height="16">
+            <use href="./images/icons.svg#icon-twitter"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="social-item">
+        <a href="facebook" class="social-link-team">
+          <svg class="icon-socials-team" width="16" height="16">
+            <use href="./images/icons.svg#icon-facebook"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="social-item">
+        <a href="linkedin" class="social-link-team">
+          <svg class="icon-socials-team" width="16" height="16">
+            <use href="./images/icons.svg#icon-linkedin"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </div>
+  <!-- #endregion-->
 </body>
 
 </html>
