--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
         <ul class="team-card-set">
 
           <li class="team-card-set-item">
-            <img class="team-img" src="./images/team/img-01.jpg" alt="team member 1" width="264">
+            <img class="team-img" srcset="./images/team/img1@1x.jpg 1x, ./images/team/img1@2x.jpg 2x"
+              src="./images/team/img1@1x.jpg" alt="team member 1" width="264">
             <div class="member-title">
               <h3 class="team-text-secondary">Mark Guerrero</h3>
               <p class="team-text-tertiary">Product Designer</p>
@@ -144,7 +145,8 @@
           </li>
 
           <li class="team-card-set-item">
-            <img class="team-img" src="./images/team/img-02.jpg" alt="team member 2" width="264">
+            <img class="team-img" srcset="./images/team/img2@1x.jpg 1x, ./images/team/img2@2x.jpg 2x"
+              src="./images/team/img2@1x.jpg" alt="team member 2" width="264">
             <div class="member-title">
               <h3 class="team-text-secondary">Tom Ford</h3>
               <p class="team-text-tertiary">Frontend Developer</p>
@@ -184,7 +186,8 @@
           </li>
 
           <li class="team-card-set-item">
-            <img class="team-img" src="./images/team/img-03.jpg" alt="team member 3" width="264">
+            <img class="team-img" srcset="./images/team/img3@1x.jpg 1x, ./images/team/img3@2x.jpg 2x"
+              src="./images/team/img3@1x.jpg" alt="team member 3" width="264">
             <div class="member-title">
               <h3 class="team-text-secondary">Camila Garcia</h3>
               <p class="team-text-tertiary">Marketing</p>
@@ -224,7 +227,8 @@
           </li>
 
           <li class="team-card-set-item">
-            <img class="team-img" src="./images/team/img-04.jpg" alt="team member 4" width="264">
+            <img class="team-img" srcset="./images/team/img4@1x.jpg 1x, ./images/team/img4@2x.jpg 2x"
+              src="./images/team/img4@1x.jpg" alt="team member 4" width="264">
             <div class="member-title">
               <h3 class="team-text-secondary">Daniel Wilson</h3>
               <p class="team-text-tertiary">UI Designer</p>
@@ -271,7 +275,8 @@
         <ul class="portfolio-card-set">
           <li class="portfolio-card-set-item">
             <div class="portfolio-img-wrapper">
-              <img class="portfolio-img" src="./images/portfolio/img-1.jpg" alt="banking app preview" width="360">
+              <img class="portfolio-img" srcset="./images/portfolio/img1@1x.jpg 1x, ./images/portfolio/img1@2x.jpg 2x"
+                src="./images/portfolio/img-1.jpg" alt="banking app preview" width="360">
               <p class="overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
                 Ecommerce App · Cloud Storage App
@@ -285,7 +290,8 @@
 
           <li class="portfolio-card-set-item">
             <div class="portfolio-img-wrapper">
-              <img class="portfolio-img" src="./images/portfolio/img-2.jpg" alt="paying with phone" width="360">
+              <img class="portfolio-img" srcset="./images/portfolio/img2@1x.jpg 1x, ./images/portfolio/img2@2x.jpg 2x"
+                src="./images/portfolio/img-2.jpg" alt="paying with phone" width="360">
               <p class="overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
                 Ecommerce App ·
@@ -300,7 +306,8 @@
 
           <li class="portfolio-card-set-item">
             <div class="portfolio-img-wrapper">
-              <img class="portfolio-img" src="./images/portfolio/img-3.jpg" alt="laptop and phone" width="360">
+              <img class="portfolio-img" srcset="./images/portfolio/img3@1x.jpg 1x, ./images/portfolio/img3@2x.jpg 2x"
+                src="./images/portfolio/img-3.jpg" alt="laptop and phone" width="360">
               <p class="overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
                 Ecommerce App ·
@@ -315,7 +322,8 @@
 
           <li class="portfolio-card-set-item">
             <div class="portfolio-img-wrapper">
-              <img class="portfolio-img" src="./images/portfolio/img-4.jpg" alt="view of driver seat" width="360">
+              <img class="portfolio-img" srcset="./images/portfolio/img4@1x.jpg 1x, ./images/portfolio/img4@2x.jpg 2x"
+                src="./images/portfolio/img-4.jpg" alt="view of driver seat" width="360">
               <p class="overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
                 Ecommerce App ·
@@ -330,8 +338,8 @@
 
           <li class="portfolio-card-set-item">
             <div class="portfolio-img-wrapper">
-              <img class="portfolio-img" src="./images/portfolio/img-5.jpg" alt="illustrations on the phone screen"
-                width="360">
+              <img class="portfolio-img" srcset="./images/portfolio/img5@1x.jpg 1x, ./images/portfolio/img5@2x.jpg 2x"
+                src="./images/portfolio/img-5.jpg" alt="illustrations on the phone screen" width="360">
               <p class="overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
                 Ecommerce App ·
@@ -346,7 +354,8 @@
 
           <li class="portfolio-card-set-item">
             <div class="portfolio-img-wrapper">
-              <img class="portfolio-img" src="./images/portfolio/img-6.jpg" alt="smiling woman" width="360">
+              <img class="portfolio-img" srcset="./images/portfolio/img6@1x.jpg 1x, ./images/portfolio/img6@2x.jpg 2x"
+                src="./images/portfolio/img-6.jpg" alt="smiling woman" width="360">
               <p class="overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
                 Ecommerce App ·
