--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
   </main>
   <footer class="footer" id="footer">
     <div class="footer-container container">
-      <span class="module-assist">
+      <div class="module-assist">
         <div class="footer-block-1">
           <a class="footer-logo" href="./index.html">Webs<span class="footer-logo-light">Studio</span></a>
           <p class="footer-text-primary">Increase the flow of customers and sales for your business with digital
@@ -414,7 +414,7 @@
             </li>
           </ul>
         </div>
-      </span>
+      </div>
       <div class="form-container">
         <p class="form-subscribe-text">Subscribe</p>
         <form class="subscribe-form">
